# python

./: .bashrc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .markdownlint.yaml  LICENSE  Microsoft.PowerShell_profile.ps1  README.md  app.py  notebook.ipynb  pyproject.toml  requirements.code-coverage.txt  requirements.code-quality.txt  template.env  vercel.json
.github/workflows/: .gitkeep  ci-cd.yaml
.idx/: dev.nix
.oh-my-posh/: robbyrussell.omp.json  spaceship.omp.json
tests/: test_core.py  test_web.py
tests/files/datalake/idx.co.id/: GetStockSummary.json
tests/files/datalake/webapi.bps.go.id/: inflation.json
voxrow/core/adapters/: __init__.py  repository.py
voxrow/core/adapters/ports/: __init__.py  httpx.py  pathlib.py
voxrow/core/domain/: domain_services.py  value_objects.py
voxrow/core/services/: handlers.py  unit_of_work.py
voxrow/data/: __init__.py
voxrow/data/adapters/: __init__.py  ports.py
voxrow/data/adapters/ports/: boto3.py
voxrow/data/domain/: domain_services.py  value_objects.py
voxrow/data/services/: handlers.py  unit_of_work.py
voxrow/web/: __init__.py  entrypoint.py
voxrow/web/domain/: __init__.py  domain_services.py  value_objects.py
voxrow/web/entrypoints/: __init__.py  typer.py
voxrow/web/entrypoints/fastapi/: __init__.py  dependencies.py  exception_handlers.py  middleware.py  routers.py
voxrow/web/templates/: BASE.html  BASE.html.j2  chartjs.html.j2  error.html.j2  index.html  inflation.html  inflation.html.j2  logo.html.j2
