# Copyright (C) Pipin Fitriadi - All Rights Reserved

# Unauthorized copying of this file, via any medium is strictly prohibited
# Proprietary and confidential
# Written by Pipin Fitriadi <pipinfitriadi@gmail.com>, 30 November 2025

[build-system]
requires = ['setuptools>=61.0', 'setuptools-git-versioning<2']
build-backend = 'setuptools.build_meta'

[project]
name = 'voxrow.web'
description = "VOXROW's Web"
readme = 'README.md'
requires-python = '>=3.12, <3.13'
license = {text = 'Proprietary'}
keywords = [
    'VOXROW',
    'web',
]
authors = [{name = 'Pipin Fitriadi'}, {email = 'pipinfitriadi@gmail.com'}]
maintainers = [{name = 'Pipin Fitriadi', email = 'pipinfitriadi@gmail.com'}]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: Other/Proprietary License',
    'Natural Language :: English',
    'Natural Language :: Indonesian',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: WWW/HTTP :: HTTP Servers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]
dependencies = [
    'fastapi[standard]',
    'pandas',
    'lxml',
]
dynamic = ['version']

[project.scripts]
app = 'voxrow.web:app'

[project.optional-dependencies]
code-coverage = [
    'coverage',
    'pytest',
    'toml',
]
code-quality = [
    'flake8-bandit',
    'flake8-black',
    'flake8-bugbear',
    'flake8-isort',
]
dev = [
    'httpx[cli]',
]

[project.urls]
Homepage = 'https://github.com/pipinfitriadi/web'
Repository = 'https://github.com/pipinfitriadi/web'

[tool.setuptools.packages.find]
include = ['voxrow.web']

[tool.setuptools-git-versioning]
enabled = true
template = '{tag}'
dev_template = '{tag}'
dirty_template = '{tag}'
tag_filter = '^\d+\.\d+\.\d+(-[a-zA-Z0-9]+(\.[a-zA-Z0-9]+)*)?(\+[a-zA-Z0-9]+(\.[a-zA-Z0-9]+)*)?$'
